# tinyrenderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  watch.sh
